# seashell

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
src/seashell/: __init__.py  __main__.py  data.json  encoders.py  test.py  utils.py
